# openSDUC

./: .readthedocs.yaml  README.RST  README.md  README.rst  environment.yaml  oUC_Data_Demand_16g.csv  oUC_Data_Duration_16g.csv  oUC_Data_Generation_16g.csv  oUC_Data_MaximumStorage_16g.csv  oUC_Data_OperatingReserve_16g.csv  oUC_Data_Parameter_16g.csv  oUC_Data_Scenario_16g.csv  oUC_Data_VariableGeneration_16g.csv  oUC_Dict_Company_16g.csv  oUC_Dict_Generation_16g.csv  oUC_Dict_LoadLevel_16g.csv  oUC_Dict_Scenario_16g.csv  oUC_Dict_Storage_16g.csv  oUC_Dict_Technology_16g.csv  openSDUC.py  pyproject.toml
doc/md/: ContactUs.md  Download.md  InputData.md  Introduction.md  MathematicalFormulation.md  OutputResults.md  index.md
doc/rst/: ContactUs.rst  Download.md  Download.rst  InputData.rst  Introduction.md  Introduction.rst  MathematicalFormulation.md  MathematicalFormulation.rst  OutputResults.rst  conf.py  index.rst
openSDUC/: __init__.py  oUC_Data_Demand_16g.csv  oUC_Data_EnergyInflows_16g.csv  oUC_Data_Generation_16g.csv  oUC_Data_OperatingReserve_16g.csv  oUC_Data_VariableGeneration_16g.csv  oUC_Dict_Company_16g.csv  oUC_Dict_LoadLevel_16g.csv  openSDUC.py  openSDUC_main.py
openSDUC/16g/: oUC_Data_Demand_16g.csv  oUC_Data_Duration_16g.csv  oUC_Data_EnergyInflows_16g.csv  oUC_Data_Generation_16g.csv  oUC_Data_MaximumGeneration_16g.csv  oUC_Data_MaximumStorage_16g.csv  oUC_Data_OperatingReserve_16g.csv  oUC_Data_Parameter_16g.csv  oUC_Data_Scenario_16g.csv  oUC_Data_VariableGeneration_16g.csv  oUC_Dict_Generation_16g.csv  oUC_Dict_LoadLevel_16g.csv  oUC_Dict_Scenario_16g.csv  oUC_Dict_Technology_16g.csv  oUC_Result_ENS_16g.csv  oUC_Result_ESSChargeEnergy_16g.csv  oUC_Result_ESSCharge_16g.csv  (+19 more)
