[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "openSDUC"
dist-name = "openSDUC"
author = "IIT-EnergySystemModels"
author-email = "andres.ramos@comillas.edu"
home-page = "https://pascua.iit.comillas.edu/aramos/openSDUC/index.html"
classifiers = [
  "Development Status :: 5 - Production/Stable","Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.11",]
requires-python = ">=3.11"
description-file = "README.rst"
requires = [
  "pyomo>=5.7.3",
  "matplotlib>=3.3.4",
  "numpy>=1.20.1",
  "glpk>=4.65",
  "pandas>=1.2.3",
  "psutil>=5.8.0"]

[tool.flit.scripts]
openSDUC_Main = "openSDUC:main"
